--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+
+    <!-- تحميل الـ JavaScript بعد تحميل الصفحة -->
+    <script src="main.js" defer></script>
   </body>
 </html>
