--- a/index.html
+++ b/index.html
@@ -1,61 +1,44 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>إزالة خلفية الصور</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body class="bg-gray-100">
-    <div class="container mx-auto px-4 py-8">
-      <h1 class="text-3xl font-bold text-center mb-8">أداة إزالة خلفية الصور</h1>
-      
-      <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-6">
-        <div class="mb-4">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="image-input">
-            اختر صورة
-          </label>
-          <input
-            type="file"
-            id="image-input"
-            accept="image/*"
-            class="w-full p-2 border rounded"
-          />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🚀 احصل على فيديو رقمي بجودة عالية!</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-gray-900 text-white">
+    
+    <!-- خلفية متحركة -->
+    <div class="background-animation"></div>
+
+    <div class="container mx-auto px-6 py-16 text-center relative z-10">
+        <h1 class="text-4xl md:text-5xl font-extrabold text-blue-400 animate-fade-in">
+            🎬 احصل على مقطع فيديو احترافي بجودة عالية! 🎬
+        </h1>
+        <p class="mt-4 text-lg md:text-xl opacity-80 animate-fade-in">
+            فيديو جاهز للتحميل والاستخدام، بدقة عالية وتأثيرات مذهلة! 🌟
+        </p>
+
+        <!-- فيديو تجريبي -->
+        <div class="mt-8">
+            <video class="rounded-lg shadow-lg border-4 border-blue-500 animate-scale-in" controls>
+                <source src="video.mp4" type="video/mp4">
+                متصفحك لا يدعم تشغيل الفيديو.
+            </video>
         </div>
 
-        <div class="mb-4">
-          <button
-            id="remove-bg"
-            class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600 disabled:bg-gray-400"
-            disabled
-          >
-            إزالة الخلفية
-          </button>
+        <!-- زر الشراء -->
+        <div class="mt-8">
+            <a href="https://t.me/YOUR_TELEGRAM_USERNAME" class="btn-glow">
+                💬 تواصل معنا عبر تيليجرام
+            </a>
         </div>
 
-        <div id="result" class="hidden">
-          <div class="mb-4">
-            <h3 class="text-lg font-semibold mb-2">النتيجة</h3>
-            <img id="result-image" class="w-full rounded" />
-          </div>
-          <button
-            id="download"
-            class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600"
-          >
-            تحميل الصورة
-          </button>
-        </div>
-
-        <div id="loading" class="hidden">
-          <div class="text-center py-4">
-            <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-500 mx-auto"></div>
-            <p class="mt-2">جاري المعالجة...</p>
-          </div>
-        </div>
-      </div>
+        <footer class="mt-10 opacity-70 text-sm">
+            <p>جميع الحقوق محفوظة © 2025 | <span class="text-blue-400">تصميم احترافي بجودة عالية</span></p>
+        </footer>
     </div>
 
-    <!-- تحميل الـ JavaScript بعد تحميل الصفحة -->
-    <script src="main.js" defer></script>
-  </body>
+</body>
 </html>
