--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🚀 احصل على فيديو رقمي بجودة عالية!</title>
+    <title>احصل على أداة تنظيف زجاج السيارات الآن! 🚗</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,30 +13,43 @@
     <div class="background-animation"></div>
 
     <div class="container mx-auto px-6 py-16 text-center relative z-10">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-blue-400 animate-fade-in">
-            🎬 احصل على مقطع فيديو احترافي بجودة عالية! 🎬
+        <h1 class="text-4xl md:text-5xl font-extrabold text-green-400 animate-fade-in">
+            🌟 أداة تنظيف الزجاج وإزالة بقع الزيت! 🌟
         </h1>
         <p class="mt-4 text-lg md:text-xl opacity-80 animate-fade-in">
-            فيديو جاهز للتحميل والاستخدام، بدقة عالية وتأثيرات مذهلة! 🌟
+            رؤية أوضح أثناء القيادة! 🚘 احصل عليها الآن والدفع عند الاستلام.
         </p>
 
-        <!-- فيديو تجريبي -->
-        <div class="mt-8">
-            <video class="rounded-lg shadow-lg border-4 border-blue-500 animate-scale-in" controls>
-                <source src="video.mp4" type="video/mp4">
-                متصفحك لا يدعم تشغيل الفيديو.
-            </video>
+        <!-- صور المنتج -->
+        <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-4">
+            <img src="product1.jpg" class="rounded-lg shadow-lg">
+            <img src="product2.jpg" class="rounded-lg shadow-lg">
         </div>
 
-        <!-- زر الشراء -->
+        <!-- عرض قبل/بعد الاستخدام -->
         <div class="mt-8">
-            <a href="https://t.me/YOUR_TELEGRAM_USERNAME" class="btn-glow">
-                💬 تواصل معنا عبر تيليجرام
-            </a>
+            <h2 class="text-2xl font-bold text-blue-400">🔍 قبل وبعد الاستخدام</h2>
+            <img src="before-after.jpg" class="rounded-lg shadow-lg mt-4">
+        </div>
+
+        <!-- نموذج الطلب -->
+        <div class="mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
+            <h2 class="text-2xl font-bold">📋 قم بملء النموذج لطلب المنتج</h2>
+            <form action="submit.php" method="POST" class="mt-4">
+                <input type="text" name="name" placeholder="الاسم الكامل" required class="input-field">
+                <input type="tel" name="phone" placeholder="رقم الجوال" required class="input-field">
+                <select name="quantity" required class="input-field">
+                    <option value="1">1 قطعة - 9.99$</option>
+                    <option value="2">2 قطع - 18.99$ (خصم!)</option>
+                    <option value="3">3 قطع - 25.99$ (خصم أكبر!)</option>
+                </select>
+                <button type="submit" class="btn-glow">🚀 اطلب الآن والدفع عند الاستلام</button>
+            </form>
         </div>
 
         <footer class="mt-10 opacity-70 text-sm">
-            <p>جميع الحقوق محفوظة © 2025 | <span class="text-blue-400">تصميم احترافي بجودة عالية</span></p>
+            <p>🚚 مدة التوصيل: من 1 إلى 7 أيام</p>
+            <p>جميع الحقوق محفوظة © 2025 | <span class="text-green-400">منتج عالي الجودة</span></p>
         </footer>
     </div>
 
