--- a/index.html
+++ b/index.html
@@ -3,38 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>احصل على أداة تنظيف زجاج السيارات الآن! 🚗</title>
+    <title>احصل على منتجك الآن!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-900 text-white">
+<body class="bg-pink-100 text-gray-900">
     
-    <!-- خلفية متحركة -->
-    <div class="background-animation"></div>
-
-    <div class="container mx-auto px-6 py-16 text-center relative z-10">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-green-400 animate-fade-in">
-            🌟 أداة تنظيف الزجاج وإزالة بقع الزيت! 🌟
+    <div class="container mx-auto px-6 py-16 text-center">
+        <h1 class="text-4xl md:text-5xl font-extrabold text-pink-600">
+            ✨ أداة تنظيف الزجاج بجودة عالية! ✨
         </h1>
-        <p class="mt-4 text-lg md:text-xl opacity-80 animate-fade-in">
-            رؤية أوضح أثناء القيادة! 🚘 احصل عليها الآن والدفع عند الاستلام.
+        <p class="mt-4 text-lg md:text-xl opacity-80">
+            احصل على المنتج الآن، والدفع عند الاستلام! 🚚 شحن سريع من 1 إلى 7 أيام.
         </p>
 
-        <!-- صور المنتج -->
-        <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-4">
-            <img src="product1.jpg" class="rounded-lg shadow-lg">
-            <img src="product2.jpg" class="rounded-lg shadow-lg">
+        <!-- سلايدر صور المنتج -->
+        <div class="relative mt-8">
+            <button id="prev" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-gray-700 text-white p-2 rounded-full">❮</button>
+            <img id="productImage" src="product1.jpg" class="rounded-lg shadow-lg mx-auto w-1/2">
+            <button id="next" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-gray-700 text-white p-2 rounded-full">❯</button>
         </div>
 
-        <!-- عرض قبل/بعد الاستخدام -->
-        <div class="mt-8">
-            <h2 class="text-2xl font-bold text-blue-400">🔍 قبل وبعد الاستخدام</h2>
-            <img src="before-after.jpg" class="rounded-lg shadow-lg mt-4">
+        <!-- ألوان المنتج -->
+        <div class="mt-4 flex justify-center space-x-4">
+            <img src="product1.jpg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product1.jpg')">
+            <img src="product2.jpg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product2.jpg')">
+            <img src="product3.jpg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product3.jpg')">
         </div>
 
         <!-- نموذج الطلب -->
-        <div class="mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
-            <h2 class="text-2xl font-bold">📋 قم بملء النموذج لطلب المنتج</h2>
+        <div class="mt-8 bg-white p-6 rounded-lg shadow-lg">
+            <h2 class="text-2xl font-bold text-pink-600">📋 قم بملء النموذج لطلب المنتج</h2>
             <form action="submit.php" method="POST" class="mt-4">
                 <input type="text" name="name" placeholder="الاسم الكامل" required class="input-field">
                 <input type="tel" name="phone" placeholder="رقم الجوال" required class="input-field">
@@ -49,9 +48,10 @@
 
         <footer class="mt-10 opacity-70 text-sm">
             <p>🚚 مدة التوصيل: من 1 إلى 7 أيام</p>
-            <p>جميع الحقوق محفوظة © 2025 | <span class="text-green-400">منتج عالي الجودة</span></p>
+            <p>جميع الحقوق محفوظة © 2025</p>
         </footer>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
