--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>احصل على منتجك الآن!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
+    <!-- مكتبة Swiper.js -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 <body class="bg-pink-100 text-gray-900">
     
@@ -68,5 +70,8 @@
     </div>
 
     <script src="script.js"></script>
+    <!-- مكتبة Swiper.js -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
