--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <!-- سلايدر احترافي لعرض المنتج -->
 <div class="swiper mySwiper mt-8">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="product1.jpg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="product2.jpg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="product3.jpg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="product1.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="product2.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="product3.jpeg" class="rounded-lg shadow-lg"></div>
     </div>
     
     <!-- أزرار التنقل -->
