--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!-- سلايدر صور المنتج -->
         <div class="swiper mySwiper mt-8">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="product1.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="product2.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="product3.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="product4.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="./product1.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="./product2.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="./product3.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="./product4.jpeg" class="rounded-lg shadow-lg"></div>
             </div>
 
             <!-- أزرار التنقل -->
@@ -34,14 +34,6 @@
 
             <!-- النقاط السفلية -->
             <div class="swiper-pagination"></div>
-        </div>
-
-        <!-- صور مصغرة لتغيير الصورة الرئيسية -->
-        <div class="mt-4 flex justify-center space-x-4">
-            <img src="product1.jpeg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product1.jpeg')">
-            <img src="product2.jpeg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product2.jpeg')">
-            <img src="product3.jpeg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product3.jpeg')">
-            <img src="product4.jpeg" class="thumbnail w-16 h-16 rounded-lg cursor-pointer" onclick="changeImage('product4.jpeg')">
         </div>
 
         <!-- نموذج الطلب -->
