--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!-- سلايدر صور المنتج -->
         <div class="swiper mySwiper mt-8">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./product1.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="./product2.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="./product3.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="./product4.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="product1.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="product2.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="product3.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="product4.jpeg" class="rounded-lg shadow-lg"></div>
             </div>
 
             <!-- أزرار التنقل -->
