--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>احصل على منتجك الآن!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
-    <!-- مكتبة Swiper.js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 <body class="bg-pink-100 text-gray-900">
@@ -22,17 +21,15 @@
         <!-- سلايدر صور المنتج -->
         <div class="swiper mySwiper mt-8">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="product1.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="product2.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="product3.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="product4.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product1.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product2.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product3.jpeg" class="rounded-lg shadow-lg"></div>
+                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product4.jpeg" class="rounded-lg shadow-lg"></div>
             </div>
 
             <!-- أزرار التنقل -->
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
-
-            <!-- النقاط السفلية -->
             <div class="swiper-pagination"></div>
         </div>
 
@@ -62,7 +59,6 @@
         </footer>
     </div>
 
-    <!-- مكتبة Swiper.js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
