--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         </p>
 
         <!-- سلايدر صور المنتج -->
-        <div class="swiper mySwiper mt-8">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product1.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product2.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product3.jpeg" class="rounded-lg shadow-lg"></div>
-                <div class="swiper-slide"><img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/refs/heads/main/product4.jpeg" class="rounded-lg shadow-lg"></div>
-            </div>
+<div class="swiper mySwiper mt-8">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="images/product1.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/product2.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/product3.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/product4.jpeg" class="rounded-lg shadow-lg"></div>
+    </div>
 
-            <!-- أزرار التنقل -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
-        </div>
+    <!-- أزرار التنقل -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+</div>
 
         <!-- نموذج الطلب -->
         <div class="mt-8 bg-white p-6 rounded-lg shadow-lg">
