--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- سلايدر صور المنتج -->
 <div class="swiper mySwiper mt-8">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/product1.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/IMG_3098.jpeg" class="rounded-lg shadow-lg"></div>
         <div class="swiper-slide"><img src="images/product2.jpeg" class="rounded-lg shadow-lg"></div>
         <div class="swiper-slide"><img src="images/product3.jpeg" class="rounded-lg shadow-lg"></div>
         <div class="swiper-slide"><img src="images/product4.jpeg" class="rounded-lg shadow-lg"></div>
