--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <div class="swiper mySwiper mt-8">
     <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="images/IMG_3098.jpeg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="images/product2.jpeg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="images/product3.jpeg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="images/product4.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/IMG_3099.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/IMG_3099.jpeg" class="rounded-lg shadow-lg"></div>
+        <div class="swiper-slide"><img src="images/IMG_3099.jpeg" class="rounded-lg shadow-lg"></div>
     </div>
 
     <!-- أزرار التنقل -->
