--- a/index.html
+++ b/index.html
@@ -18,32 +18,22 @@
             احصل على المنتج الآن، والدفع عند الاستلام! 🚚 شحن سريع من 1 إلى 7 أيام.
         </p>
 
-        <!-- سلايدر صور المنتج -->
-<div class="swiper mySwiper mt-8">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/IMG_3098.jpeg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="images/IMG_3099.jpeg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="images/IMG_3099.jpeg" class="rounded-lg shadow-lg"></div>
-        <div class="swiper-slide"><img src="images/IMG_3099.jpeg" class="rounded-lg shadow-lg"></div>
-    </div>
-
-    <!-- أزرار التنقل -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-</div>
-
         <!-- نموذج الطلب -->
         <div class="mt-8 bg-white p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-bold text-pink-600">📋 قم بملء النموذج لطلب المنتج</h2>
             <form id="orderForm" class="mt-4">
                 <input type="text" id="name" placeholder="الاسم الكامل" required class="input-field">
+                <input type="text" id="address" placeholder="العنوان" required class="input-field">
+                <input type="text" id="city" placeholder="المدينة" required class="input-field">
+                <input type="text" id="postalCode" placeholder="الرمز البريدي" required class="input-field">
                 <input type="tel" id="phone" placeholder="رقم الجوال" required class="input-field">
+                
                 <select id="quantity" required class="input-field">
                     <option value="1">1 قطعة - 9.99$</option>
                     <option value="2">2 قطع - 18.99$ (خصم!)</option>
                     <option value="3">3 قطع - 25.99$ (خصم أكبر!)</option>
                 </select>
+                
                 <button type="submit" class="btn-glow">🚀 اطلب الآن والدفع عند الاستلام</button>
             </form>
 
@@ -51,6 +41,14 @@
             <div id="confirmationMessage" class="hidden mt-4 bg-green-500 text-white p-4 rounded-lg">
                 ✅ تم استلام طلبك! سيتم التواصل معك في أسرع وقت ممكن.
             </div>
+        </div>
+
+        <!-- عرض الصور بشكل عمودي -->
+        <div class="mt-8 flex flex-col items-center space-y-4">
+            <img src="images/product1.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
+            <img src="images/product2.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
+            <img src="images/product3.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
+            <img src="images/product4.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
         </div>
 
         <footer class="mt-10 opacity-70 text-sm">
