--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
 </head>
 <body class="bg-pink-100 text-gray-900">
 
-    <!-- الشعار الاحترافي -->
-    <div class="text-center py-6">
-        <img src="images/logo.png" alt="شعار الشركة" class="mx-auto w-40">
-    </div>
+    <!-- 🔹 هيدر علوي احترافي -->
+    <header class="bg-black text-white py-4">
+        <div class="container mx-auto flex flex-col md:flex-row justify-around items-center text-center space-y-2 md:space-y-0">
+            <div class="flex items-center space-x-2">
+                <img src="images/icon1.png" class="w-6">
+                <span class="text-lg font-semibold">مسوق معتمد للمنتجات - المنتجات الملموسة</span>
+            </div>
+            <div class="flex items-center space-x-2">
+                <img src="images/icon2.png" class="w-6">
+                <span class="text-lg font-semibold">مرونة وسرعة وصول الشحنات - من علي إكسبرس وأمازون</span>
+            </div>
+            <div class="flex items-center space-x-2">
+                <img src="images/icon3.png" class="w-6">
+                <span class="text-lg font-semibold">يتم التواصل معك فوراً بعد طلبك - برسالة نصية وواتساب</span>
+            </div>
+            <div class="flex items-center space-x-2">
+                <img src="images/icon4.png" class="w-6">
+                <span class="text-lg font-semibold">📱 المنتجات الرقمية - شراء وتحميل فوري</span>
+            </div>
+        </div>
+    </header>
 
     <div class="container mx-auto px-6 py-8 text-center">
         <h1 class="text-4xl md:text-5xl font-extrabold text-pink-600">
@@ -69,25 +86,7 @@
             </div>
         </div>
 
-        <!-- قسم الخدمات -->
-        <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-6 bg-gray-200 p-6 rounded-lg">
-            <div class="bg-white p-6 rounded-lg shadow-lg text-center">
-                <h3 class="text-lg font-bold mt-4">مسوق معتمد للمنتجات</h3>
-                <p>- المنتجات الملموسة</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow-lg text-center">
-                <h3 class="text-lg font-bold mt-4">مرونة وسرعة وصول الشحنات</h3>
-                <p>- من علي إكسبرس</p>
-                <p>- و أمازون</p>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow-lg text-center">
-                <h3 class="text-lg font-bold mt-4">يتم التواصل معك فوراً بعد طلبك</h3>
-                <p>- برسالة نصية</p>
-                <p>- رسالة واتساب</p>
-            </div>
-        </div>
-
-        <!-- صور المنتج أسفل الصفحة -->
+        <!-- 🔹 صور المنتج في أسفل الصفحة -->
         <div class="mt-8 flex flex-col items-center space-y-4">
             <img src="images/product1.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
             <img src="images/product2.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
@@ -95,7 +94,7 @@
             <img src="images/product4.jpeg" class="w-full max-w-md rounded-lg shadow-lg">
         </div>
 
-        <!-- هيدر أسود في أسفل الصفحة -->
+        <!-- 🔹 هيدر سفلي مشابه للهيدر العلوي -->
         <footer class="mt-10 bg-black text-white py-6 text-center">
             <div class="container mx-auto">
                 <p class="text-lg">من نحن | سياسة الخصوصية | سياسة الاسترجاع | اتصل بنا</p>
