--- a/index.html
+++ b/index.html
@@ -10,24 +10,33 @@
 </head>
 <body class="bg-pink-100 text-gray-900">
 
-    <!-- 🔹 هيدر علوي احترافي -->
-    <header class="bg-black text-white py-4">
-        <div class="container mx-auto flex flex-col md:flex-row justify-around items-center text-center space-y-2 md:space-y-0">
-            <div class="flex items-center space-x-2">
-                <img src="images/icon1.png" class="w-6">
-                <span class="text-lg font-semibold">مسوق معتمد للمنتجات - المنتجات الملموسة</span>
+    <!-- 🔹 هيدر احترافي بأسلوب البطاقة -->
+    <header class="bg-white shadow-lg py-6">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center px-6">
+            
+            <!-- شعار الشركة -->
+            <div class="flex items-center space-x-4">
+                <img src="images/logo.png" alt="شعار الشركة" class="w-16">
+                <div>
+                    <h1 class="text-xl font-bold text-blue-600">اسم الشركة</h1>
+                    <p class="text-sm text-gray-600">أفضل المنتجات بأعلى جودة</p>
+                </div>
             </div>
-            <div class="flex items-center space-x-2">
-                <img src="images/icon2.png" class="w-6">
-                <span class="text-lg font-semibold">مرونة وسرعة وصول الشحنات - من علي إكسبرس وأمازون</span>
-            </div>
-            <div class="flex items-center space-x-2">
-                <img src="images/icon3.png" class="w-6">
-                <span class="text-lg font-semibold">يتم التواصل معك فوراً بعد طلبك - برسالة نصية وواتساب</span>
-            </div>
-            <div class="flex items-center space-x-2">
-                <img src="images/icon4.png" class="w-6">
-                <span class="text-lg font-semibold">📱 المنتجات الرقمية - شراء وتحميل فوري</span>
+
+            <!-- معلومات الهيدر -->
+            <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-8 text-gray-700 text-sm">
+                <div class="flex items-center space-x-2">
+                    <img src="images/phone-icon.png" class="w-5">
+                    <span>+966 123 456 789</span>
+                </div>
+                <div class="flex items-center space-x-2">
+                    <img src="images/email-icon.png" class="w-5">
+                    <span>email@company.com</span>
+                </div>
+                <div class="flex items-center space-x-2">
+                    <img src="images/location-icon.png" class="w-5">
+                    <span>الرياض، السعودية</span>
+                </div>
             </div>
         </div>
     </header>
