--- a/index.html
+++ b/index.html
@@ -6,43 +6,124 @@
     <title>احصل على منتجك الآن!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 <body class="bg-gray-100 text-gray-900">
 
-    <!-- 🔹 هيدر احترافي -->
+    <!-- 🔹 الهيدر العلوي الاحترافي -->
     <header class="bg-white shadow-lg py-6">
-        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center px-6">
-            <div class="flex items-center space-x-4">
-                <img src="images/logo.png" alt="شعار الشركة" class="w-16">
-                <div>
-                    <h1 class="text-xl font-bold text-green-600">اسم الشركة</h1>
-                    <p class="text-sm text-gray-600">أفضل المنتجات بأعلى جودة</p>
-                </div>
-            </div>
-            <nav class="hidden md:flex space-x-6 text-gray-700 text-sm">
-                <a href="#" class="hover:text-green-600">الميزات</a>
-                <a href="#" class="hover:text-green-600">العروض</a>
-                <a href="#" class="hover:text-green-600">المنتجات</a>
-                <a href="#" class="hover:text-green-600">اتصل بنا</a>
-            </nav>
+        <div class="container mx-auto flex flex-col md:flex-row justify-center items-center">
+            <img src="images/logo.png" alt="شعار الشركة" class="w-20 h-20">
+            <h1 class="text-2xl font-bold text-green-600 ml-4">اسم الشركة</h1>
         </div>
     </header>
 
     <!-- 🔹 القسم الرئيسي -->
-    <section class="relative bg-white py-16">
-        <div class="container mx-auto flex flex-col md:flex-row items-center">
-            <div class="md:w-1/2 text-center md:text-right">
-                <h1 class="text-5xl font-extrabold text-gray-800">حوّل الزائر إلى عميل</h1>
-                <p class="mt-4 text-lg text-gray-600">أفضل منتج بأعلى جودة، جربه الآن!</p>
-                <div class="mt-6">
-                    <button class="bg-green-600 text-white px-6 py-3 rounded-lg shadow-md hover:bg-green-700 transition">عرض الميزات</button>
-                    <button class="bg-blue-600 text-white px-6 py-3 rounded-lg shadow-md hover:bg-blue-700 transition ml-4">شراء المنتج</button>
+    <section class="relative bg-white py-16 text-center">
+        <div class="container mx-auto">
+            <h1 class="text-5xl font-extrabold text-gray-800">حوّل الزائر إلى عميل</h1>
+            <p class="mt-4 text-lg text-gray-600">أفضل منتج بأعلى جودة، جربه الآن!</p>
+        </div>
+    </section>
+
+    <!-- 🔹 نموذج الطلب -->
+    <section class="py-16">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-bold text-gray-800">📋 قم بملء النموذج لطلب المنتج</h2>
+            <form id="orderForm" class="mt-8 bg-white p-6 rounded-lg shadow-lg max-w-lg mx-auto">
+                <input type="text" id="name" placeholder="الاسم الكامل" required class="input-field">
+
+                <!-- اختيار الدولة -->
+                <select id="country" required class="input-field" onchange="updateShippingInfo()">
+                    <option value="sa" data-code="+966">🇸🇦 السعودية</option>
+                    <option value="qa" data-code="+974">🇶🇦 قطر</option>
+                    <option value="ae" data-code="+971">🇦🇪 الإمارات</option>
+                    <option value="kw" data-code="+965">🇰🇼 الكويت</option>
+                    <option value="om" data-code="+968">🇴🇲 عمان</option>
+                    <option value="bh" data-code="+973">🇧🇭 البحرين</option>
+                    <option value="eg" data-code="+20">🇪🇬 مصر</option>
+                    <option value="jo" data-code="+962">🇯🇴 الأردن</option>
+                    <option value="iq" data-code="+964">🇮🇶 العراق</option>
+                    <option value="lb" data-code="+961">🇱🇧 لبنان</option>
+                </select>
+
+                <input type="text" id="city" placeholder="المدينة" required class="input-field">
+                <input type="text" id="address" placeholder="العنوان" required class="input-field">
+                <input type="text" id="postalCode" placeholder="الرمز البريدي" required class="input-field">
+
+                <!-- رقم الجوال مع مفتاح الدولة -->
+                <div class="flex items-center">
+                    <span id="country-code" class="bg-gray-300 p-2 rounded-lg ml-2">+966</span>
+                    <input type="tel" id="phone" placeholder="رقم الجوال" required class="input-field">
                 </div>
-            </div>
-            <div class="md:w-1/2 flex justify-center">
-                <img src="images/product-preview.png" alt="صورة المنتج" class="w-3/4 rounded-lg shadow-lg">
-            </div>
+
+                <select id="quantity" required class="input-field">
+                    <option value="1">1 قطعة - 9.99$</option>
+                    <option value="2">2 قطع - 18.99$ (خصم!)</option>
+                    <option value="3">3 قطع - 25.99$ (خصم أكبر!)</option>
+                </select>
+                
+                <button type="submit" class="btn-glow">🚀 اطلب الآن والدفع عند الاستلام</button>
+            </form>
+
+            <!-- مدة الشحن -->
+            <p id="shipping-text" class="mt-4 text-gray-700 font-semibold">🚚 شحن سريع من 1 إلى 7 أيام.</p>
+        </div>
+    </section>
+
+    <!-- 🔹 هيدر سفلي -->
+    <footer class="mt-10 bg-black text-white py-6 text-center">
+        <div class="container mx-auto">
+            <p class="text-lg">من نحن | سياسة الخصوصية | سياسة الاسترجاع | اتصل بنا</p>
+            <p class="mt-2 text-gray-400">📧 solbtcmana@gmail.com</p>
+        </div>
+    </footer>
+
+    <script>
+        function updateShippingInfo() {
+            var country = document.getElementById("country");
+            var selectedOption = country.options[country.selectedIndex];
+            var countryCode = selectedOption.getAttribute("data-code");
+            var shippingText = document.getElementById("shipping-text");
+
+            // تحديث مفتاح الدولة
+            document.getElementById("country-code").innerText = countryCode;
+
+            // تحديث مدة الشحن بناءً على الدولة
+            if (["sa", "qa", "ae", "kw", "om", "bh"].includes(country.value)) {
+                shippingText.innerText = "🚚 شحن سريع من 1 إلى 7 أيام.";
+            } else if (country.value === "eg") {
+                shippingText.innerText = "🚚 شحن سريع من 1 إلى 7 أيام.";
+            } else {
+                shippingText.innerText = "🚚 شحن سريع من 1 إلى 10 أيام.";
+            }
+        }
+    </script>
+
+</body>
+</html><!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>احصل على منتجك الآن!</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-gray-100 text-gray-900">
+
+    <!-- 🔹 الهيدر العلوي الاحترافي -->
+    <header class="bg-white shadow-lg py-6">
+        <div class="container mx-auto flex flex-col md:flex-row justify-center items-center">
+            <img src="images/logo.png" alt="شعار الشركة" class="w-20 h-20">
+            <h1 class="text-2xl font-bold text-green-600 ml-4">اسم الشركة</h1>
+        </div>
+    </header>
+
+    <!-- 🔹 القسم الرئيسي -->
+    <section class="relative bg-white py-16 text-center">
+        <div class="container mx-auto">
+            <h1 class="text-5xl font-extrabold text-gray-800">حوّل الزائر إلى عميل</h1>
+            <p class="mt-4 text-lg text-gray-600">أفضل منتج بأعلى جودة، جربه الآن!</p>
         </div>
     </section>
 
